--- a/jssport_back_end/build.gradle
+++ b/jssport_back_end/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '2.7.10'
+    id 'org.springframework.boot' version '2.7.7'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
@@ -20,9 +20,32 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.projectlombok:lombok:1.18.20'
+    implementation 'org.projectlombok:lombok:1.18.20'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
+    //     Security
+    implementation group: 'org.springframework.security', name: 'spring-security-web', version: '5.4.2'
+
+    implementation group: 'org.springframework.security', name: 'spring-security-config', version: '5.4.2'
+
+    implementation group: 'org.springframework.security', name: 'spring-security-taglibs', version: '5.4.2'
+
+//     https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
+    implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.4.3'
+
+//     https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
+    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.0'
+
+//    https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
+
+    implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.4.3'
+
+//    JWT
+//         https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
+    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.0'
     testImplementation 'org.springframework.security:spring-security-test'
 }
 
