--- a/project-sprint2/package.json
+++ b/project-sprint2/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.10.4",
+    "creditcardpayments": "^1.0.3",
     "rxjs": "~6.5.4",
     "sweetalert2": "^11.7.3",
     "tslib": "^1.10.0",
